feat(backend): adiciona rotas GET de elemento unico
